<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day0" />

        <CheckBox
            android:id="@+id/checkbox_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day1" />

        <CheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day2" />

        <CheckBox
            android:id="@+id/checkbox_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day3" />

        <CheckBox
            android:id="@+id/checkbox_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day4" />

        <CheckBox
            android:id="@+id/checkbox_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day5" />

        <CheckBox
            android:id="@+id/checkbox_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day6" />

        <CheckBox
            android:id="@+id/checkbox_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day7" />

        <CheckBox
            android:id="@+id/checkbox_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day8" />

        <CheckBox
            android:id="@+id/checkbox_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day9" />

        <CheckBox
            android:id="@+id/checkbox_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:textColor="@color/greyed"
            android:text="@string/day10" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>